src/main/java/api/antlr/SublimationParser.java
// Generated from F:/JavaProject/SublimationLang/docs/Sublimation.g4 by ANTLR 4.13.2
package api.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class SublimationParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, WS=13, KG=14, ID=15, STRING=16, NUMBER=17, 
		ARROW=18;
	public static final int
		RULE_root = 0, RULE_top = 1, RULE_name = 2, RULE_data = 3, RULE_type = 4, 
		RULE_struct = 5, RULE_ann = 6, RULE_anns = 7, RULE_expr = 8, RULE_expr__ = 9, 
		RULE_invoke = 10, RULE_prefixInvoke = 11, RULE_expr_ = 12, RULE_infixInvoke = 13, 
		RULE_lambda = 14, RULE_block = 15, RULE_stmt = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "top", "name", "data", "type", "struct", "ann", "anns", "expr", 
			"expr__", "invoke", "prefixInvoke", "expr_", "infixInvoke", "lambda", 
			"block", "stmt"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "'='", "':'", "'<'", "','", "'>'", "'('", "')'", "'['", 
			"']'", "'@'", "'~'", null, null, null, null, null, "'->'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "WS", "KG", "ID", "STRING", "NUMBER", "ARROW"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Sublimation.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SublimationParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RootContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SublimationParser.EOF, 0); }
		public List<TopContext> top() {
			return getRuleContexts(TopContext.class);
		}
		public TopContext top(int i) {
			return getRuleContext(TopContext.class,i);
		}
		public List<TerminalNode> KG() { return getTokens(SublimationParser.KG); }
		public TerminalNode KG(int i) {
			return getToken(SublimationParser.KG, i);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SublimationListener ) ((SublimationListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SublimationListener ) ((SublimationListener)listener).exitRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SublimationVisitor ) return ((SublimationVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			setState(45);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
				enterOuterAlt(_localctx, 1);
				{
				setState(34);
				match(EOF);
				}
				break;
			case T__10:
			case KG:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(39); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(35);
					top();
					setState(37);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(36);
						match(KG);
						}
						break;
					}
					}
					}
					setState(41); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 51200L) != 0) );
				setState(43);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopContext extends ParserRuleContext {
		public DataContext data() {
			return getRuleContext(DataContext.class,0);
		}
		public StructContext struct() {
			return getRuleContext(StructContext.class,0);
		}
		public TopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_top; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SublimationListener ) ((SublimationListener)listener).enterTop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SublimationListener ) ((SublimationListener)listener).exitTop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SublimationVisitor ) return ((SublimationVisitor<? extends T>)visitor).visitTop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopContext top() throws RecognitionException {
		TopContext _localctx = new TopContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_top);
		try {
			setState(49);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				data();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(48);
				struct();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NameContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(SublimationParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SublimationParser.ID, i);
		}
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SublimationListener ) ((SublimationListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SublimationListener ) ((SublimationListener)listener).exitName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SublimationVisitor ) return ((SublimationVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_name);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(ID);
			setState(56);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(52);
					match(T__0);
					setState(53);
					match(ID);
					}
					} 
				}
				setState(58);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DataContext extends ParserRuleContext {
		public AnnsContext anns() {
			return getRuleContext(AnnsContext.class,0);
		}
		public TerminalNode ID() { return getToken(SublimationParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode KG() { return getToken(SublimationParser.KG, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SublimationListener ) ((SublimationListener)listener).enterData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SublimationListener ) ((SublimationListener)listener).exitData(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SublimationVisitor ) return ((SublimationVisitor<? extends T>)visitor).visitData(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataContext data() throws RecognitionException {
		DataContext _localctx = new DataContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_data);
		int _la;
		try {
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				anns();
				setState(60);
				match(ID);
				setState(61);
				match(T__1);
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==KG) {
					{
					setState(62);
					match(KG);
					}
				}

				setState(65);
				expr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				anns();
				setState(68);
				match(ID);
				setState(69);
				match(T__2);
				setState(70);
				type();
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__1) {
					{
					setState(71);
					match(T__1);
					setState(73);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==KG) {
						{
						setState(72);
						match(KG);
						}
					}

					setState(75);
					expr();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(SublimationParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SublimationParser.ID, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> KG() { return getTokens(SublimationParser.KG); }
		public TerminalNode KG(int i) {
			return getToken(SublimationParser.KG, i);
		}
		public TerminalNode ARROW() { return getToken(SublimationParser.ARROW, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SublimationListener ) ((SublimationListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SublimationListener ) ((SublimationListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SublimationVisitor ) return ((SublimationVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		int _la;
		try {
			int _alt;
			setState(177);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,31,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				match(ID);
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(81);
					match(T__0);
					setState(82);
					match(ID);
					}
				}

				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(85);
					match(T__3);
					setState(87);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==KG) {
						{
						setState(86);
						match(KG);
						}
					}

					setState(89);
					type();
					setState(100);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(91);
							_errHandler.sync(this);
							_la = _input.LA(1);
							if (_la==KG) {
								{
								setState(90);
								match(KG);
								}
							}

							setState(93);
							match(T__4);
							setState(95);
							_errHandler.sync(this);
							_la = _input.LA(1);
							if (_la==KG) {
								{
								setState(94);
								match(KG);
								}
							}

							setState(97);
							type();
							}
							} 
						}
						setState(102);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
					}
					setState(104);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==KG) {
						{
						setState(103);
						match(KG);
						}
					}

					setState(106);
					match(T__5);
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				match(T__6);
				setState(128);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
				case 1:
					{
					setState(112);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==KG) {
						{
						setState(111);
						match(KG);
						}
					}

					setState(114);
					type();
					setState(125);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(116);
							_errHandler.sync(this);
							_la = _input.LA(1);
							if (_la==KG) {
								{
								setState(115);
								match(KG);
								}
							}

							setState(118);
							match(T__4);
							setState(120);
							_errHandler.sync(this);
							_la = _input.LA(1);
							if (_la==KG) {
								{
								setState(119);
								match(KG);
								}
							}

							setState(122);
							type();
							}
							} 
						}
						setState(127);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
					}
					}
					break;
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==KG) {
					{
					setState(130);
					match(KG);
					}
				}

				setState(133);
				match(T__7);
				setState(134);
				match(ARROW);
				setState(135);
				type();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(136);
				match(T__6);
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==KG) {
					{
					setState(137);
					match(KG);
					}
				}

				setState(140);
				type();
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==KG) {
					{
					setState(141);
					match(KG);
					}
				}

				setState(144);
				match(T__4);
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==KG) {
					{
					setState(145);
					match(KG);
					}
				}

				setState(148);
				type();
				setState(159);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,27,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(150);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==KG) {
							{
							setState(149);
							match(KG);
							}
						}

						setState(152);
						match(T__4);
						setState(154);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==KG) {
							{
							setState(153);
							match(KG);
							}
						}

						setState(156);
						type();
						}
						} 
					}
					setState(161);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,27,_ctx);
				}
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==KG) {
					{
					setState(162);
					match(KG);
					}
				}

				setState(165);
				match(T__7);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(167);
				match(T__6);
				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==KG) {
					{
					setState(168);
					match(KG);
					}
				}

				setState(171);
				type();
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==KG) {
					{
					setState(172);
					match(KG);
					}
				}

				setState(175);
				match(T__7);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StructContext extends ParserRuleContext {
		public AnnsContext anns() {
			return getRuleContext(AnnsContext.class,0);
		}
		public TerminalNode ID() { return getToken(SublimationParser.ID, 0); }
		public List<DataContext> data() {
			return getRuleContexts(DataContext.class);
		}
		public DataContext data(int i) {
			return getRuleContext(DataContext.class,i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> KG() { return getTokens(SublimationParser.KG); }
		public TerminalNode KG(int i) {
			return getToken(SublimationParser.KG, i);
		}
		public StructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SublimationListener ) ((SublimationListener)listener).enterStruct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SublimationListener ) ((SublimationListener)listener).exitStruct(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SublimationVisitor ) return ((SublimationVisitor<? extends T>)visitor).visitStruct(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StructContext struct() throws RecognitionException {
		StructContext _localctx = new StructContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_struct);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			anns();
			setState(180);
			match(ID);
			setState(192);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(181);
				match(T__3);
				setState(182);
				type();
				setState(187);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(183);
					match(T__4);
					setState(184);
					type();
					}
					}
					setState(189);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(190);
				match(T__5);
				}
			}

			setState(194);
			match(T__8);
			setState(196);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,34,_ctx) ) {
			case 1:
				{
				setState(195);
				match(KG);
				}
				break;
			}
			setState(198);
			data();
			setState(209);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,37,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(200);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==KG) {
						{
						setState(199);
						match(KG);
						}
					}

					setState(202);
					match(T__4);
					setState(204);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,36,_ctx) ) {
					case 1:
						{
						setState(203);
						match(KG);
						}
						break;
					}
					setState(206);
					data();
					}
					} 
				}
				setState(211);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,37,_ctx);
			}
			setState(213);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KG) {
				{
				setState(212);
				match(KG);
				}
			}

			setState(215);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnnContext extends ParserRuleContext {
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public TerminalNode STRING() { return getToken(SublimationParser.STRING, 0); }
		public TerminalNode NUMBER() { return getToken(SublimationParser.NUMBER, 0); }
		public List<TerminalNode> KG() { return getTokens(SublimationParser.KG); }
		public TerminalNode KG(int i) {
			return getToken(SublimationParser.KG, i);
		}
		public AnnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ann; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SublimationListener ) ((SublimationListener)listener).enterAnn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SublimationListener ) ((SublimationListener)listener).exitAnn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SublimationVisitor ) return ((SublimationVisitor<? extends T>)visitor).visitAnn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnnContext ann() throws RecognitionException {
		AnnContext _localctx = new AnnContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ann);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(217);
			match(T__10);
			setState(218);
			name();
			setState(232);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(219);
				match(T__6);
				setState(221);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==KG) {
					{
					setState(220);
					match(KG);
					}
				}

				setState(226);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case STRING:
					{
					setState(223);
					match(STRING);
					}
					break;
				case NUMBER:
					{
					setState(224);
					match(NUMBER);
					}
					break;
				case ID:
					{
					setState(225);
					name();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(229);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==KG) {
					{
					setState(228);
					match(KG);
					}
				}

				setState(231);
				match(T__7);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnnsContext extends ParserRuleContext {
		public List<AnnContext> ann() {
			return getRuleContexts(AnnContext.class);
		}
		public AnnContext ann(int i) {
			return getRuleContext(AnnContext.class,i);
		}
		public List<TerminalNode> KG() { return getTokens(SublimationParser.KG); }
		public TerminalNode KG(int i) {
			return getToken(SublimationParser.KG, i);
		}
		public AnnsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anns; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SublimationListener ) ((SublimationListener)listener).enterAnns(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SublimationListener ) ((SublimationListener)listener).exitAnns(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SublimationVisitor ) return ((SublimationVisitor<? extends T>)visitor).visitAnns(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnnsContext anns() throws RecognitionException {
		AnnsContext _localctx = new AnnsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_anns);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(243);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,45,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(235);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==KG) {
						{
						setState(234);
						match(KG);
						}
					}

					setState(237);
					ann();
					setState(239);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,44,_ctx) ) {
					case 1:
						{
						setState(238);
						match(KG);
						}
						break;
					}
					}
					} 
				}
				setState(245);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,45,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public Expr__Context expr__() {
			return getRuleContext(Expr__Context.class,0);
		}
		public PrefixInvokeContext prefixInvoke() {
			return getRuleContext(PrefixInvokeContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SublimationListener ) ((SublimationListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SublimationListener ) ((SublimationListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SublimationVisitor ) return ((SublimationVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_expr);
		try {
			setState(248);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,46,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(246);
				expr__();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(247);
				prefixInvoke();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
